# mdbook-pikchr

./: .bookignore  .dockerignore  404.html  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  SUMMARY.md  align.html  book.toml  config.html  index.html  print.html  searchindex.js  searchindex.json  toc.html  toc.js
demos/: diagram.html  diagram.md  diagram.pikchr  error.html  index.html
doc/: align-center.md  align-left.md  align-right.md  align.html  align.md  config.html  config.md
docs/: README.md  SUMMARY.md  align.md  config.md
docs/demos/: README.md  diagram.md  error.md
src/: main.rs  pikchr.rs
