[package]
name = "mdbook-pikchr"
version = "0.1.8"
authors = ["Konstantin Podsvirov <konstantin@podsvirov.pro>"]
description = "A mdbook preprocessor to render pikchr code blocks as images in your book"
license = "MIT"
documentation = "https://podsvirov.github.io/mdbook-pikchr/"
repository = "https://github.com/podsvirov/mdbook-pikchr/"
readme = "docs/README.md"
keywords = ["mdbook", "pikchr", "pic", "md", "markdown"]
edition = "2021"

[[bin]]
name = "mdbook-pikchr"
path = "src/main.rs"
doc = false

[dependencies]
clap = "4.3.12"
env_logger = "0.11.5"
libc = "0.2.161"
log = "0.4.22"
mdbook = "0.4.41"
pulldown-cmark = { version = "0.10.0", default-features = false }
pulldown-cmark-to-cmark = "14.0.1"
semver = "1.0.19"
serde_json = "1.0.107"

[build-dependencies]
cc = "1.1.36"
