[package]
name = "mdbook-pikchr"
version = "0.2.0"
authors = ["Konstantin Podsvirov <konstantin@podsvirov.su>"]
description = "A mdbook preprocessor to render pikchr code blocks as images in your book"
license = "MIT"
documentation = "https://podsvirov.github.io/mdbook-pikchr/"
repository = "https://github.com/podsvirov/mdbook-pikchr/"
readme = "docs/README.md"
keywords = ["mdbook", "pikchr", "pic", "md", "markdown"]
edition = "2021"

[[bin]]
name = "mdbook-pikchr"
path = "src/main.rs"
doc = false

[dependencies]
clap = "4.5.51"
env_logger = "0.11.8"
libc = "0.2.177"
log = "0.4.28"
mdbook-preprocessor = "0.5.0"
mdbook-markdown = "0.5.0"
pulldown-cmark-to-cmark = "21.1.0"
semver = "1.0.27"
serde_json = "1.0.145"

[build-dependencies]
cc = "1.2.46"
